# adventofcode

./: README.md  pyproject.toml
year2022/: __init__.py  day_1.py  day_10.py  day_11.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  models.py  tests.py  utils.py
year2022/day-1/: main.py
year2022/day-2/: main.py
year2022/day-3/: main.py
year2022/day-4/: main.py
year2022/day-5/: main.py
